Fix buttons and wrong sizes of the main section

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
   /* --text-color: #7b4600; */
   --text-color: #ab6f33;
   --alternative-text-color: #EDCC95;
+  --off-white: gainsboro;
 }
 
 @font-face {
@@ -25,7 +26,6 @@ body {
   padding-top: 1rem;
   background-color: var(--background-color);
   font-size: 4rem;
-  height: 50vh;
 }
 
 button {
@@ -58,7 +58,7 @@ img {
 body::before {
   content: "";
   position: absolute;
-  height: 100%;
+  height: 110%;
   top: 0;
   left: 0;
   right: 0;
@@ -80,15 +80,14 @@ nav button {
   background-color: transparent;
   width: 90px;
   border: none;
-  border-bottom: 1px solid orangered;
-  transform: scale(1.5);
+  border-left: 1px solid var(--off-white);
+  transform: scale(1.2);
 
 }
 
 div#content h1 {
   text-align: center;
   font-weight: lighter;
-  /* font-size: 4rem; */
   transform: translateY(50px);
 }
 
@@ -107,10 +106,10 @@ div#content h1 {
 }
 
 .center-container button {
-  transform: scale(2);
-  background-color: orangered;
+  transform: scale(1);
+  background: transparent;
   border: none;
-  height: 22px;
+  border-left: 1px solid var(--off-white);
 }
 
 
